# AutoTrading

./: .gitignore
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  conftest.py  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
backend/config/: execution.yaml  learning.yaml  prometheus.yml  risk.yaml  strategy.yaml  user.yaml
backend/scripts/: download_data.py  init_kafka.sh  init_questdb.sql  start.ps1  start.sh
backend/src/analysis/: __init__.py
backend/src/api/: __init__.py  app.py  auth.py  dependencies.py  schemas.py
backend/src/billing/: __init__.py  calculator.py  models.py  tracker.py
backend/src/common/: __init__.py  config.py  constants.py  enums.py  exceptions.py  logging.py  models.py  retry.py  utils.py
backend/src/core/: coordinator.py
backend/src/discovery/: __init__.py  service.py
backend/src/learning/: __init__.py  analyzer.py  collector.py  constants.py  engine.py  statistics.py  storage.py
backend/src/strategy/: __init__.py  base.py  health.py  orchestrator.py  registry.py
backend/src/user/: __init__.py  context.py  crypto.py  manager.py  models.py  storage.py
backend/tests/api/: test_admin.py  test_auth.py  test_execution.py  test_risk.py  test_state.py  test_strategy.py  test_user.py
backend/tests/e2e/: test_trading_flow.py
backend/tests/integration/: test_data_flow.py  test_discovery_flow.py  test_execution_flow.py  test_learning_flow.py  test_lifecycle_flow.py  test_multi_user_flow.py  test_risk_flow.py  test_state_flow.py  test_strategy_flow.py
docs/: README.md
(+345 files in other folders)
