[tool.poetry]
name = "btc-auto-trading"
version = "1.0.0"
description = "BTC 自动交易系统"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = {version = "^2.5.0", extras = ["email"]}
pyyaml = "^6.0"
httpx = "^0.26.0"
websockets = "^12.0"
cryptography = "^42.0.0"
PyJWT = "^2.8.0"
bcrypt = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["..", "."]
